--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -639,7 +639,7 @@ CONFIG_FRAME_VECTOR=y
 CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
 # CONFIG_SPECULATIVE_PAGE_FAULT is not set
 # CONFIG_HAVE_LOW_MEMORY_KILLER is not set
-# CONFIG_PROCESS_RECLAIM is not set
+CONFIG_PROCESS_RECLAIM=y
 CONFIG_OPLUS_MM_HACKS=y
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
@@ -651,7 +651,7 @@ CONFIG_LRU_GEN_ENABLED=y
 CONFIG_DAMON=y
 CONFIG_DAMON_VADDR=y
 CONFIG_DAMON_PADDR=y
-# CONFIG_DAMON_RECLAIM is not set
+CONFIG_DAMON_RECLAIM=y
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
 CONFIG_SECCOMP=y
